--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=bestuser
 spring.datasource.password=bestuser
+
+management.endpoints.web.exposure.include=*
+management.endpoint.info.enabled=true
+spring.main.log-startup-info=true
+info.name = Spring Data Rest
+info.description = Spring Boot Application
+
